# SING-analyzing-semantic-invariants-classifiers

./: .dockerignore  .gitignore  CITATION.cff  DATASET.md  LICENSE  MODEL_CARD.md  README.md  index.html  pyproject.toml  requirements.txt
configs/: models.yaml  runtime.yaml  translator_metadata_template.yaml
doc/: TODO.md
docker/: README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  requirements.runtime.txt  up-cpu-dev.sh  up-gpu-dev.sh
docs/: TODO.md
docs/agents/: model-loader-context.md  translator-loader-context.md  unclip-generator-context.md
figs/authors/: harel_yadid.jfif  roy_betser.jfif
misc/: README.md  convert_csv_to_npz.py  download_assets.py
misc/embeddings/: attribute_embeddings_broden_style_fp16.npz
notebooks/: 01_single_image_quickstart.ipynb  README.md
src/sing/: __init__.py  cli.py  utils.py
src/sing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sing/core/: __init__.py  analyzer.py  metrics.py  projectors.py
src/sing/generation/: __init__.py  generate.py  unclip_wrapper.py
src/sing/models/: __init__.py  registry.py
src/sing/scoring/: __init__.py  dictionaries.py
src/sing/translators/: __init__.py  architectures.py  loader.py  registry.py
tests/: test_dictionary_scoring.py  test_metrics.py  test_projectors.py
translators/: README.md  registry.yaml
translators/bitresnet/linear/: metadata.yaml
translators/convnext/linear/: best.pt  metadata.yaml
translators/deit/linear/: best.pt  metadata.yaml
translators/densenet/linear/: best.pt  metadata.yaml
translators/dinov2/linear/: metadata.yaml
(+16 files in other folders)
